[package]
name = "threadlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
memoffset = "0.6"
time = { version = "0.3.13", features = ["formatting"] }
derivative = "2.2"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
]
